Fixing the alignment of the image.

--- a/src/AlbumArtLarge.css
+++ b/src/AlbumArtLarge.css
@@ -1,3 +1,5 @@
 .AlbumArtLarge {
   margin-top: 60px;
+  margin-left: auto;
+  margin-right: auto;
 }
