--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+html {
+  height: 100%;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  margin: 0px 0px 0px 0px;
+  font-family: "Pontano Sans", "MyriadPro-Regular", "Myriad Pro Regular",
+    MyriadPro, "Myriad Pro", Helvetica, Arial, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  font-display: swap;
+  text-align: center;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #000000;
+  background-image: linear-gradient(#3c3c3e, #171719, #000000);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
